--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 title:            Peter Blouw
 tagline:          ''
 description:      ''
-# url:              http://hyde.getpoole.com
+url:              http://peterblouw.org
 baseurl:          /
 
 # author:
