--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title:            Peter Blouw
 tagline:          ''
 description:      ''
 url:              http://peterblouw.org
-baseurl:          /
+baseurl:          ''
 
 # author:
 #   name:           'Mark Otto'
